@@ -2,6 +2,18 @@
 - Code Base Changes:
     - None
 - Resolvers Added:
+    - streamapi
+- Resolvers Fixed/Updated:
+    - none
+- Resolvers Removed
+    - None
+- Languages Added/Updated
+	- None
+
+[B]Version 5.0.14 (Apr 24, 2018)[/B]
+- Code Base Changes:
+    - None
+- Resolvers Added:
     - nxload
 - Resolvers Fixed/Updated:
     - thevid
